# calib_challenge_comma

./: .gitignore  README.md  eval.py  main.py  pyproject.toml
notebooks/: explore_vggt.ipynb
pipeline/: base.py  executor.py  types.py
stages/: feature_extractor.py  motion_estimator.py  segment.py  video_reader.py
