[project]
name = "calib-challenge-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncio>=3.4.3",
    "jupyter>=1.1.1",
    "mypy>=1.16.0",
    "numpy>=2.2.6",
    "opencv-python-headless>=4.11.0.86",
    "ultralytics>=8.3.150",
    "torch>=1.10.0",
    "notebook>=7.4.3",
]
